--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ project.ext.lwjglNatives = "natives-windows"
 project.ext.imguiVersion = '1.83.1'
 
 dependencies {
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.7'
+
     // ImGUI stuff
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
@@ -31,13 +34,10 @@ dependencies {
 
     implementation "io.github.spair:imgui-java-binding:$imguiVersion"
     implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
-
     implementation "io.github.spair:imgui-java-natives-windows:$imguiVersion"
-
 
     // LWJGL stuff
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
-
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl-glfw"
