--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+    flatDir {
+        dirs 'libs'
+    }
     jcenter()
     mavenCentral()
 }
@@ -21,6 +24,12 @@ project.ext.lwjglNatives = "natives-windows"
 project.ext.imguiVersion = '1.83.1'
 
 dependencies {
+    // Box2D
+    implementation name: 'jbox2d-library'
+
+    // JUnit
+    testImplementation('junit:junit:4.13')
+
     //GSON
     implementation 'com.google.code.gson:gson:2.8.7'
 
